fixed layout issues with tablet devices

--- a/p2-header-ad-styles.css
+++ b/p2-header-ad-styles.css
@@ -21,3 +21,11 @@
 	
 }
 
+/* media queries */
+@media screen and (min-width: 321px) and (max-width: 980px) {
+    /* tablet styles go here */
+	#p2HeaderAd {
+		right: 20px;
+		
+	}
+}
